--- a/designs.css
+++ b/designs.css
@@ -12,7 +12,7 @@
     display: none
 }
 
-@font-face {
+/* @font-face {
     font-family: 'Open Sans';
     src: url(../fonts/open-sans/Regular/OpenSans-Regular.eot?v=1.1.0);
     src: url(../fonts/open-sans/Regular/OpenSans-Regular.eot?#iefix&v=1.1.0) format("embedded-opentype"),url(../fonts/open-sans/Regular/OpenSans-Regular.woff2?v=1.1.0) format("woff2"),url(../fonts/open-sans/Regular/OpenSans-Regular.woff?v=1.1.0) format("woff"),url(../fonts/open-sans/Regular/OpenSans-Regular.ttf?v=1.1.0) format("truetype"),url(../fonts/open-sans/Regular/OpenSans-Regular.svg?v=1.1.0#Regular) format("svg");
@@ -34,7 +34,7 @@
     src: url(../fonts/open-sans/Bold/OpenSans-Bold.eot?#iefix&v=1.1.0) format("embedded-opentype"),url(../fonts/open-sans/Bold/OpenSans-Bold.woff2?v=1.1.0) format("woff2"),url(../fonts/open-sans/Bold/OpenSans-Bold.woff?v=1.1.0) format("woff"),url(../fonts/open-sans/Bold/OpenSans-Bold.ttf?v=1.1.0) format("truetype"),url(../fonts/open-sans/Bold/OpenSans-Bold.svg?v=1.1.0#Bold) format("svg");
     font-weight: 700;
     font-style: normal
-}
+} */
 
 * {
     -webkit-box-sizing: border-box;
